// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser properties of type  Limited Concept  1`] = `
LimitedTest {
  "$$owner": null,
  "$$propertyIndex": undefined,
  "$$propertyName": "",
  "$id": "ID-26",
  "$typename": "LimitedTest",
  "_PI_limitedNonOpt": LimitedNonOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedNonOpt",
    "$id": "ID-23",
    "$typename": "LimitedNonOptional",
    "_PI_other": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "other",
      "_PI_pathname": Array [
        "FIRST",
      ],
      "_PI_referred": OtherLimited {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-4",
        "$typename": "OtherLimited",
        "name": "FIRST",
      },
      "typeName": "OtherLimited",
    },
    "_PI_otherMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "FIRST",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "name": "FIRST",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "FIRST",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "name": "FIRST",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 4,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
    ],
    "_PI_visMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visMultiWithExtra": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visWithExtra": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visWithExtra",
      "_PI_pathname": Array [
        "-",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "name": "-",
      },
      "typeName": "VisibilityKind",
    },
    "_PI_visibility": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visibility",
      "_PI_pathname": Array [
        "+",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "name": "+",
      },
      "typeName": "VisibilityKind",
    },
  },
  "_PI_limitedOpt": LimitedOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedOpt",
    "$id": "ID-24",
    "$typename": "LimitedOptional",
    "_PI_visMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "#",
        ],
        "_PI_referred": null,
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visMultiWithExtra": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visWithExtra": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visWithExtra",
      "_PI_pathname": Array [
        "-",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "name": "-",
      },
      "typeName": "VisibilityKind",
    },
    "_PI_visibility": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visibility",
      "_PI_pathname": Array [
        "+",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "name": "+",
      },
      "typeName": "VisibilityKind",
    },
  },
  "_PI_limitedOpt2": LimitedOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedOpt2",
    "$id": "ID-25",
    "$typename": "LimitedOptional",
  },
  "name": "anyNameWillDo",
}
`;

exports[`Parser properties of type  Part  1`] = `
PartsTest {
  "$$owner": null,
  "$$propertyIndex": undefined,
  "$$propertyName": "",
  "$id": "ID-32",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-31",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-27",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "content": "stringLiteral",
      "optContent": 10,
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-28",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "content": "otherString",
        "optContent": 0,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-29",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralXXX",
        "optContent": 123,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-30",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralYYY",
        "optContent": 0,
      },
    ],
  },
  "_PI_partsOfParts": null,
  "name": "myName",
}
`;

exports[`Parser properties of type  Part and Sub Parts  1`] = `
PartsTest {
  "$$owner": null,
  "$$propertyIndex": undefined,
  "$$propertyName": "",
  "$id": "ID-79",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-46",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-42",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "content": "stringLiteral",
      "optContent": 10,
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-43",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "content": "otherString",
        "optContent": 0,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-44",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralXXX",
        "optContent": 123,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-45",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralYYY",
        "optContent": 0,
      },
    ],
  },
  "_PI_partsOfParts": WithSubSubParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "partsOfParts",
    "$id": "ID-78",
    "$typename": "WithSubSubParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": SubConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-55",
      "$typename": "SubConcept",
      "_PI_listSub": Array [
        WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "listSub",
          "$id": "ID-51",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-49",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteralFGT",
            "optContent": 10,
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-50",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "content": "otherStringZZZ",
              "optContent": 0,
            },
          ],
        },
        WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "listSub",
          "$id": "ID-54",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-52",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "-",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-2",
                "$typename": "VisibilityKind",
                "name": "-",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteralZZZ",
            "optContent": 1045,
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-53",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "content": "otherString",
              "optContent": 0,
            },
          ],
        },
      ],
      "_PI_normalSub": WithDirectParts {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "normalSub",
        "$id": "ID-48",
        "$typename": "WithDirectParts",
        "_PI_optList": Array [],
        "_PI_optPart": null,
        "_PI_part": PartConcept {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "part",
          "$id": "ID-47",
          "$typename": "PartConcept",
          "_PI_visibility": PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "visibility",
            "_PI_pathname": Array [
              "+",
            ],
            "_PI_referred": VisibilityKind {
              "$$owner": null,
              "$$propertyIndex": undefined,
              "$$propertyName": "",
              "$id": "ID-1",
              "$typename": "VisibilityKind",
              "name": "+",
            },
            "typeName": "VisibilityKind",
          },
          "content": "stringLiteral",
          "optContent": 10,
        },
        "_PI_partList": Array [],
      },
      "_PI_optListSub": Array [],
      "_PI_optionalSub": null,
    },
    "_PI_partList": Array [
      SubConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-68",
        "$typename": "SubConcept",
        "_PI_listSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "listSub",
            "$id": "ID-67",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-66",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteral",
              "optContent": 10,
            },
            "_PI_partList": Array [],
          },
        ],
        "_PI_normalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "normalSub",
          "$id": "ID-60",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-56",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteral",
            "optContent": 10,
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-57",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "content": "otherString",
              "optContent": 0,
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 1,
              "$$propertyName": "partList",
              "$id": "ID-58",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "-",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "name": "-",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteralXXX",
              "optContent": 123,
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 2,
              "$$propertyName": "partList",
              "$id": "ID-59",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteralYYY",
              "optContent": 0,
            },
          ],
        },
        "_PI_optListSub": Array [],
        "_PI_optionalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optionalSub",
          "$id": "ID-65",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-61",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteral",
            "optContent": 10,
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-62",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "content": "otherString",
              "optContent": 0,
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 1,
              "$$propertyName": "partList",
              "$id": "ID-63",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "-",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "name": "-",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteralXXX",
              "optContent": 123,
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 2,
              "$$propertyName": "partList",
              "$id": "ID-64",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteralYYY",
              "optContent": 0,
            },
          ],
        },
      },
      SubConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-77",
        "$typename": "SubConcept",
        "_PI_listSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "listSub",
            "$id": "ID-74",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-73",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteral",
              "optContent": 10,
            },
            "_PI_partList": Array [],
          },
        ],
        "_PI_normalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "normalSub",
          "$id": "ID-70",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-69",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteral",
            "optContent": 10,
          },
          "_PI_partList": Array [],
        },
        "_PI_optListSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optListSub",
            "$id": "ID-76",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-75",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLit",
              "optContent": 1440,
            },
            "_PI_partList": Array [],
          },
        ],
        "_PI_optionalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optionalSub",
          "$id": "ID-72",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-71",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "#",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-3",
                "$typename": "VisibilityKind",
                "name": "#",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteral",
            "optContent": 10,
          },
          "_PI_partList": Array [],
        },
      },
    ],
  },
  "name": "myName",
}
`;

exports[`Parser properties of type  Part with Optionals present 1`] = `
PartsTest {
  "$$owner": null,
  "$$propertyIndex": undefined,
  "$$propertyName": "",
  "$id": "ID-41",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-40",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-38",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteral",
        "optContent": 10,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-39",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralYYY",
        "optContent": 0,
      },
    ],
    "_PI_optPart": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optPart",
      "$id": "ID-34",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "content": "stringLiteral",
      "optContent": 10,
    },
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-33",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "content": "stringLiteral",
      "optContent": 10,
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-35",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "content": "otherString",
        "optContent": 0,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-36",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralXXX",
        "optContent": 123,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-37",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralYYY",
        "optContent": 0,
      },
    ],
  },
  "_PI_partsOfParts": null,
  "name": "myName",
}
`;

exports[`Parser properties of type  Primitive  1`] = `
PrimitivesTest {
  "$$owner": null,
  "$$propertyIndex": undefined,
  "$$propertyName": "",
  "$id": "ID-13",
  "$typename": "PrimitivesTest",
  "_PI_prim": Prim {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "prim",
    "$id": "ID-7",
    "$typename": "Prim",
    "primBoolean": true,
    "primIdentifier": "EenNaam",
    "primListBoolean": Array [
      true,
      false,
      true,
      false,
    ],
    "primListIdentifier": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumber": Array [
      10,
      20,
    ],
    "primListString": Array [
      "TEKST",
      "TEKST",
    ],
    "primNumber": 19,
    "primString": "TEKST",
  },
  "_PI_primExtra": PrimsWithExtraText {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "primExtra",
    "$id": "ID-8",
    "$typename": "PrimsWithExtraText",
    "primBooleanWithExtra": false,
    "primIdentifierWithExtra": "EenNaam",
    "primListBooleanWithExtra": Array [
      false,
      true,
      false,
    ],
    "primListIdentifierWithExtra": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumberWithExtra": Array [
      67,
      98,
    ],
    "primListStringWithExtra": Array [
      "TEKST",
      "TEXT",
    ],
    "primNumberWithExtra": 45,
    "primStringWithExtra": "TEKST",
  },
  "_PI_separator": PrimsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "separator",
    "$id": "ID-9",
    "$typename": "PrimsWithSeparator",
    "primListBooleanSeparator": Array [
      true,
      false,
    ],
    "primListIdentifierSeparator": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "primListStringSeparator": Array [
      "iets",
      "wat",
    ],
  },
  "_PI_separatorOpt": PrimsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "separatorOpt",
    "$id": "ID-11",
    "$typename": "PrimsWithSeparator",
    "primListBooleanSeparator": Array [
      true,
      false,
    ],
    "primListIdentifierSeparator": Array [],
    "primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "primListStringSeparator": Array [],
  },
  "_PI_terminator": PrimsWithTerminator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "terminator",
    "$id": "ID-10",
    "$typename": "PrimsWithTerminator",
    "primListBooleanTerminator": Array [
      true,
    ],
    "primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "primListNumberTerminator": Array [
      30,
    ],
    "primListStringTerminator": Array [
      "iets",
    ],
  },
  "_PI_terminatorOpt": PrimsWithTerminator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "terminatorOpt",
    "$id": "ID-12",
    "$typename": "PrimsWithTerminator",
    "primListBooleanTerminator": Array [],
    "primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "primListNumberTerminator": Array [],
    "primListStringTerminator": Array [
      "iets",
    ],
  },
  "name": "someName",
}
`;

exports[`Parser properties of type  Primitive with Keyword projection  1`] = `
PrimsWithKeywordTest {
  "$$owner": null,
  "$$propertyIndex": undefined,
  "$$propertyName": "",
  "$id": "ID-22",
  "$typename": "PrimsWithKeywordTest",
  "_PI_primWith": Array [
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 0,
      "$$propertyName": "primWith",
      "$id": "ID-14",
      "$typename": "PrimKeyword",
      "primBoolean": true,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 1,
      "$$propertyName": "primWith",
      "$id": "ID-15",
      "$typename": "PrimKeyword",
      "primBoolean": false,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 2,
      "$$propertyName": "primWith",
      "$id": "ID-16",
      "$typename": "PrimKeyword",
      "primBoolean": true,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 3,
      "$$propertyName": "primWith",
      "$id": "ID-17",
      "$typename": "PrimKeyword",
      "primBoolean": false,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 4,
      "$$propertyName": "primWith",
      "$id": "ID-18",
      "$typename": "PrimKeyword",
      "primBoolean": true,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 5,
      "$$propertyName": "primWith",
      "$id": "ID-19",
      "$typename": "PrimKeyword",
      "primBoolean": false,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 6,
      "$$propertyName": "primWith",
      "$id": "ID-20",
      "$typename": "PrimKeyword",
      "primBoolean": false,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 7,
      "$$propertyName": "primWith",
      "$id": "ID-21",
      "$typename": "PrimKeyword",
      "primBoolean": true,
    },
  ],
  "name": "myName",
}
`;

exports[`Parser properties of type  Ref  1`] = `
RefsTest {
  "$$owner": null,
  "$$propertyIndex": undefined,
  "$$propertyName": "",
  "$id": "ID-87",
  "$typename": "RefsTest",
  "_PI_directRefs": WithDirectRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directRefs",
    "$id": "ID-80",
    "$typename": "WithDirectRefs",
    "_PI_ref": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "ref",
      "_PI_pathname": Array [
        "someName.otherName.xxx.yyy",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_refList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name1.ff.gg.yuio",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name2",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name3",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name4",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
  },
  "_PI_indirectRefs": null,
  "_PI_withSeparator": RefsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "withSeparator",
    "$id": "ID-86",
    "$typename": "RefsWithSeparator",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-83",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-84",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "optList",
        "$id": "ID-85",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
    "_PI_partList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-81",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-82",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
  },
  "name": "myName",
}
`;

exports[`Parser properties of type  Ref with Optionals present 1`] = `
RefsTest {
  "$$owner": null,
  "$$propertyIndex": undefined,
  "$$propertyName": "",
  "$id": "ID-98",
  "$typename": "RefsTest",
  "_PI_directRefs": WithDirectRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directRefs",
    "$id": "ID-88",
    "$typename": "WithDirectRefs",
    "_PI_optRef": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optRef",
      "_PI_pathname": Array [
        "nameA",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_optRefList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameZ",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameY.sdfsgargh.HERA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameX",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
    "_PI_ref": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "ref",
      "_PI_pathname": Array [
        "someName.x34565",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_refList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name1.d45fgh",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name2",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name3",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name4",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
  },
  "_PI_indirectRefs": WithSubSubRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "indirectRefs",
    "$id": "ID-94",
    "$typename": "WithSubSubRefs",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-93",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
    "_PI_optPart": WithDirectRefs {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optPart",
      "$id": "ID-90",
      "$typename": "WithDirectRefs",
      "_PI_optRef": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "optRef",
        "_PI_pathname": Array [
          "nameA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_optRefList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameZ",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameY",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameX",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "_PI_ref": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "ref",
        "_PI_pathname": Array [
          "someName",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_refList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name1",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name2",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name3",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 3,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name4",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
    },
    "_PI_part": WithDirectRefs {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-89",
      "$typename": "WithDirectRefs",
      "_PI_optRef": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "optRef",
        "_PI_pathname": Array [
          "nameA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_optRefList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameZ",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameY.h56",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameX",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "_PI_ref": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "ref",
        "_PI_pathname": Array [
          "someName",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_refList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name1.WREQWR.gag",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name2",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name3.fghy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 3,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name4",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
    },
    "_PI_partList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-91",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-92",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
  },
  "_PI_withSeparator": RefsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "withSeparator",
    "$id": "ID-97",
    "$typename": "RefsWithSeparator",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-95",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-96",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
    "_PI_partList": Array [],
  },
  "name": "myName",
}
`;
